flattener->class_flatten and stop doing stuff to methods

--- a/main/pipeline/BUILD
+++ b/main/pipeline/BUILD
@@ -24,7 +24,7 @@ cc_library(
         "//core/proto",
         "//core/serialize",
         "//definition_validator",
-        "//flattener",
+        "//class_flatten",
         "//infer",
         "//local_vars",
         "//main/options",
@@ -65,7 +65,7 @@ cc_library(
         "//core",
         "//core/serialize",
         "//definition_validator",
-        "//flattener",
+        "//class_flatten",
         "//infer",
         "//local_vars",
         "//main/options",
