Update combiplation database

--- a/tools/BUILD
+++ b/tools/BUILD
@@ -62,7 +62,6 @@ compilation_database(
         "//namer:namer",
         "//local_vars:local_vars",
         "//infer:infer",
-        "//flattener:flattener",
         "//main/autogen:autogen",
         "//main/options:options",
         "//third_party/licenses:licenses",
@@ -80,6 +79,7 @@ compilation_database(
         "//common/kvstore:kvstore",
         "//common/crypto_hashing:crypto_hashing",
         "//common:common_test",
+        "//class_flatten:class_flatten",
         "//cfg/builder:builder",
         "//cfg:cfg",
         "//ast/substitute:substitute",
