--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,3 +14,9 @@ jobs:
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         team-reviewers: "sorbet/runner"
+    - name: "Request review for internal contribution"
+      if: github.event.pull_request.head.repo.fork == false
+      uses: kunihiko-t/review-request-action@v0.1.3
+      with:
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        team-reviewers: "sorbet/core-reviewers"
