Preemptible slow path (#2507)
* Move cancellation to message processing thread.

Should *not* be merged until a PR with preemption is ready, as it will regress performance in a very noticeable way.

* Preprocessor only needs to track file contents of dirty files.

* Fix a test that did not obey the protocol.

You cannot change an unopened file.

* Same fix, but to protocol_test_corpus

* Make editCount a u4.

* Add support for preempting the slow path with single-threaded requests. (#2549)

* Add support for preempting the slow path with single-threaded requests.

The slow path is blocking for indexing new files and `pipeline::resolver`, but is now non-blocking for `pipeline::typecheck`.

This change regresses performance in the syntax error case; a subsequent PR will fix that issue.

Also removes incomplete recording-based tests that cannot be made deterministic with preemption.

The autocomplete test wasn't actually checking the autocomplete result, and signature help only checked 1/2 sig help requests.
We should add proper tests for signatureHelp into `test_corpus` when we decide to ship that feature.

* Address feedback on PR

* Make cancelation responsive during preemption and improve preemption throughput (#2640)

* Switch to 100% tasks to make preemption cleaner and faster.

### Motivation

The original preemption implementation has two issues:

* Cancelation is less responsive than before the change.
* Only a single task is scheduled to preempt at a time, limiting throughput.

In that PR, the following can happen:

* User types a syntax error. A slow path begins.
* User types another character, but it doesn't fix the syntax error. It can take the fast path relative to the syntax error. It gets scheduled to preempt.
* User fixes the syntax error. This edit will cancel the slow path, but not until the previous edit preempts and runs.

Preemption tasks block until pipeline::resolver finishes, so the latency of cance

--- a/main/lsp/BUILD
+++ b/main/lsp/BUILD
@@ -4,6 +4,8 @@ cc_library(
         "*.cc",
         "requests/*.h",
         "requests/*.cc",
+        "notifications/*.h",
+        "notifications/*.cc",
         "watchman/*.cc",
     ]) + [
         "lsp_messages_gen.cc",
@@ -14,9 +16,11 @@ cc_library(
         "LocalVarSaver.h",
         "ShowOperation.h",
         "lsp_messages_gen_helpers.h",
+        "LSPIndexer.h",
         "LSPTask.h",
         "LSPTypechecker.h",
         "LSPTypecheckerCoordinator.h",
+        "UndoState.h",
     ],
     hdrs = [
         "LSPConfiguration.h",
@@ -24,7 +28,6 @@ cc_library(
         "LSPMessage.h",
         "LSPOutput.h",
         "LSPPreprocessor.h",
-        "TimeTravelingGlobalState.h",
         "json_types.h",
         "lsp.h",
         "lsp_messages_gen.h",
