--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,13 +10,17 @@ jobs:
     steps:
     - name: "Request review for external contribution"
       if: github.event.pull_request.head.repo.fork == true
-      uses: jez/review-request-action@92ec94478b94204018cc846a273d9d4c857d622a
-      with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
-        team-reviewers: "runner"
+      run: |
+        curl --request POST \
+        --url https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/requested_reviewers \
+        --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+        --header 'content-type: application/json' \
+        --data '{ "team_reviewers": [ "runner" ] }'
     - name: "Request review for internal contribution"
       if: github.event.pull_request.head.repo.fork == false
-      uses: jez/review-request-action@92ec94478b94204018cc846a273d9d4c857d622a
-      with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
-        team-reviewers: "core-reviewers"
+      run: |
+        curl --request POST \
+        --url https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/requested_reviewers \
+        --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+        --header 'content-type: application/json' \
+        --data '{ "team_reviewers": [ "core-reviewers" ] }'
