--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       run: |
         curl --request POST \
         --url https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/requested_reviewers \
-        --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+        --header 'authorization: Bearer ${{ secrets.JEZ_TOKEN }}' \
         --header 'content-type: application/json' \
         --data '{ "team_reviewers": [ "runner" ] }'
     - name: "Request review for internal contribution"
@@ -21,6 +21,6 @@ jobs:
       run: |
         curl --request POST \
         --url https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/requested_reviewers \
-        --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+        --header 'authorization: Bearer ${{ secrets.JEZ_TOKEN }}' \
         --header 'content-type: application/json' \
         --data '{ "team_reviewers": [ "core-reviewers" ] }'
