--- a/test/lsp/BUILD
+++ b/test/lsp/BUILD
@@ -31,6 +31,30 @@ cc_test(
 )
 
 cc_test(
+    name = "cache_protocol_test_corpus",
+    size = "medium",
+    srcs = [
+        "ProtocolTest.cc",
+        "ProtocolTest.h",
+        "cache_protocol_test_corpus.cc",
+    ],
+    copts = ["-Iexternal/gtest/include"],
+    linkstatic = select({
+        "//tools/config:linkshared": 0,
+        "//conditions:default": 1,
+    }),
+    visibility = ["//tools:__pkg__"],
+    deps = [
+        "//core",
+        "//main/lsp",
+        "//payload",
+        "//test/helpers",
+        "@com_google_googletest//:gtest",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
+
+cc_test(
     name = "multithreaded_protocol_test_corpus",
     size = "medium",
     srcs = [
