Use kvstore in LSP to optimize startup performance. (#2762)
* Use caching to speed up LSP initialization.

Includes changes to kvstore:

* kvstore can now be in an owned (via `OwnedKeyValueStore`) or unowned state.
* kvstore can be used from different threads (not simultaneously) by changing ownership.
* As a bonus, this change decouples _transactions_ (which conclude when a thread gives up ownership) from opening/closing the database.

LSP now takes ownership of kvstore during the initial indexing to substantially speed up that operation.

* kvstore unit tests.

* End-to-end cache test for LSP.

--- a/tools/BUILD
+++ b/tools/BUILD
@@ -14,6 +14,7 @@ compilation_database(
         "//test/lsp:watchman_test_corpus",
         "//test/lsp:protocol_test_corpus",
         "//test/lsp:multithreaded_protocol_test_corpus",
+        "//test/lsp:cache_protocol_test_corpus",
         "//test/fuzz:fuzz_hover",
         "//test/fuzz:proto",
         "//test/fuzz:fuzz_doc_symbols",
@@ -76,6 +77,7 @@ compilation_database(
         "//common/web_tracer_framework:tracing",
         "//common/statsd:statsd",
         "//version:version",
+        "//common/kvstore:kvstore_test",
         "//common/kvstore:kvstore",
         "//common/crypto_hashing:crypto_hashing",
         "//common:common_test",
