Make //version not depend on anything.
We plan to depend on it using non-C++ languages and want it to have a
more stable ABI

--- a/common/BUILD
+++ b/common/BUILD
@@ -33,6 +33,7 @@ cc_library(
     }),
     visibility = ["//visibility:public"],
     deps = [
+        "//version",
         "//third_party/progressbar",
         "@com_google_absl//absl/algorithm:container",
         "@com_google_absl//absl/container:flat_hash_map",
