Make //version not depend on anything. (#2777)
* Make //version not depend on anything.

We plan to depend on it using non-C++ languages and want it to have a
more stable ABI

* Make CI happy after rebase + lint

--- a/version/BUILD
+++ b/version/BUILD
@@ -10,9 +10,7 @@ cc_library(
         "//conditions:default": 1,
     }),
     visibility = ["//visibility:public"],
-    deps = [
-        "//common",
-    ],
+    deps = [],  # this should have _no_ dependencies, we want it to be very light and not impose stuff
 )
 
 config_setting(
