Fix #2: Read everything in a single transaction, write everything in a single transaction.
Previously, we might read GlobalState and cached trees in different transactions. If two Sorbet processes interleaved file reads and writes in just the right way, a process may find itself with an old nametable with new trees referring to names not on the old nametable -- which then gets committed to disk before segfaulting in namer!

I have also consolidated logic related to creating KVStore and caching gs/trees into a new package (//main/cache). I plan to move caching routines from pipeline into this new package soon.

--- a/main/lsp/BUILD
+++ b/main/lsp/BUILD
@@ -50,6 +50,7 @@ cc_library(
         "//core",
         "//core/proto",
         "//core/serialize",
+        "//main/cache",
         "//main/options",
         "//main/pipeline",
         "//payload:interface",
