--- a/tools/BUILD
+++ b/tools/BUILD
@@ -45,6 +45,7 @@ compilation_database(
         "//payload:payload",
         "//main:realmain-orig",
         "//main/pipeline:pipeline-orig",
+        "//main/cache:cache-orig",
         "//infer:infer_test",
         "//emscripten:main",
         "//payload/text:empty",
@@ -52,6 +53,7 @@ compilation_database(
         "//main/pipeline/semantic_extension:none",
         "//main:realmain",
         "//main/lsp:lsp",
+        "//main/cache:cache",
         "//payload:interface",
         "//main/pipeline:pipeline",
         "//rewriter:rewriter",
