rg -l '//version' | xargs sed -i -e 's+//version+//sorbet_version+'

--- a/common/BUILD
+++ b/common/BUILD
@@ -34,7 +34,7 @@ cc_library(
     visibility = ["//visibility:public"],
     deps = [
         "//third_party/progressbar",
-        "//version",
+        "//sorbet_version",
         "@com_google_absl//absl/algorithm:container",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/container:flat_hash_set",
