--- a/common/statsd/BUILD
+++ b/common/statsd/BUILD
@@ -15,7 +15,7 @@ cc_library(
     deps = [
         "//common",
         "//core",
-        "//version",
+        "//sorbet_version",
     ] + select({
         "//tools/config:webasm": [],
         "//conditions:default": ["@statsd"],
