Rename //version to //sorbet_version (#2798)
* git mv version sorbet_version

* zmv 'sorbet_version/version.(*)' 'sorbet_version/sorbet_version.$1'

* rg -l '\bversion/' | xargs sed -i -e 's+\<version/version.h+sorbet_version/sorbet_version.h+'

* rg -l '//version' | xargs sed -i -e 's+//version+//sorbet_version+'

* manual: BUILD file version -> sorbet_version

* Format everything

--- a/main/options/BUILD
+++ b/main/options/BUILD
@@ -13,8 +13,8 @@ cc_library(
     visibility = ["//visibility:public"],
     deps = [
         "//core",
+        "//sorbet_version",
         "//third_party/licenses",
-        "//version",
         "@cxxopts",
         "@spdlog",
         "@yaml_cpp",
