Make sorbet_version.{c,h} into a filegroup
This lets other people depend on sorbet_version.c and sorbet_version.h
directly as source files, instead of just on the object and header files
of the library.

--- a/sorbet_version/BUILD
+++ b/sorbet_version/BUILD
@@ -1,9 +1,17 @@
-cc_library(
-    name = "sorbet_version",
-    srcs = select({
+filegroup(
+    name = "sorbet_version_srcs",
+    srcs = [
+        "sorbet_version.h",
+    ] + select({
         "be-versioned": ["sorbet_version_gen.c"],
         "//conditions:default": ["sorbet_version.c"],
     }),
+    visibility = ["//visibility:public"],
+)
+
+cc_library(
+    name = "sorbet_version",
+    srcs = [":sorbet_version_srcs"],
     hdrs = ["sorbet_version.h"],
     linkstatic = select({
         "//tools/config:linkshared": 0,
