--- a/compiler/Rewriters/BUILD
+++ b/compiler/Rewriters/BUILD
@@ -14,6 +14,7 @@ cc_library(
         "//compiler/Names",
         "@com_stripe_ruby_typer//ast",
         "@com_stripe_ruby_typer//ast/treemap",
+        "@com_stripe_ruby_typer//core",
         "@spdlog",
     ],
 )
