Run semantic extensions in the test runner

--- a/test/BUILD
+++ b/test/BUILD
@@ -24,6 +24,8 @@ cc_binary(
         "//local_vars",
         "//main/autogen",
         "//main/lsp",
+        "//main/pipeline/semantic_extension:none",
+        "//main/options",
         "//namer",
         "//payload",
         "//resolver",
