Run semantic extensions in test_corpus_runner (#2821)
* Run semantic extensions in the test runner

* Add a way to run a semantic extension provider without options

--- a/test/BUILD
+++ b/test/BUILD
@@ -24,6 +24,7 @@ cc_binary(
         "//local_vars",
         "//main/autogen",
         "//main/lsp",
+        "//main/pipeline/semantic_extension:none",
         "//namer",
         "//payload",
         "//resolver",
