Structure the llvm-ir-folder output (#71)
* Mirror the input tree in the llvm-ir-folder

* Update exp files

* Fix tests

* Use ensureDir instead of dirExists/createDir

--- a/plugin_injector/BUILD
+++ b/plugin_injector/BUILD
@@ -15,6 +15,7 @@ cc_library(
         "//compiler/ObjectFileEmitter",
         "@com_stripe_ruby_typer//ast",
         "@com_stripe_ruby_typer//cfg",
+        "@com_stripe_ruby_typer//common",
         "@com_stripe_ruby_typer//main/options",
         "@com_stripe_ruby_typer//main/pipeline/semantic_extension:interface",
         "@cxxopts",
