Expose sorbet-runtime files via bazel

--- a/gems/sorbet-runtime/BUILD
+++ b/gems/sorbet-runtime/BUILD
@@ -1,5 +1,5 @@
 filegroup(
-    name = "runtime-files",
+    name = "sorbet-runtime",
     srcs = glob([
         "lib/**/*.rb",
     ]) + [
@@ -7,6 +7,7 @@ filegroup(
         "Gemfile",
         "sorbet-runtime.gemspec",
     ],
+    visibility = ["//visibility:public"],
 )
 
 filegroup(
@@ -17,7 +18,7 @@ filegroup(
 )
 
 filegroup(
-    name = "runtime-stubs",
+    name = "sorbet-runtime-stubs",
     srcs = ["test/test_helper.rb"] + glob(["test/*.rbi"]),
 )
 
@@ -25,12 +26,12 @@ sh_test(
     name = "runtime-typechecks",
     srcs = ["test/typecheck-runtime.sh"],
     args = [
-        "$(locations runtime-files)",
-        "$(locations runtime-stubs)",
+        "$(locations sorbet-runtime)",
+        "$(locations sorbet-runtime-stubs)",
     ],
     data = [
-        ":runtime-files",
-        ":runtime-stubs",
+        ":sorbet-runtime",
+        ":sorbet-runtime-stubs",
         "//main:sorbet",
     ],
 )
