Remove run/ folder (#74)
* Replace all -I with -r

I find this syntax more direct (only have to look in one place).

* Move patch_require to test/

* Remove rest of unused run/ files

--- a/test/BUILD
+++ b/test/BUILD
@@ -38,7 +38,7 @@ sh_binary(
     name = "generate_out_file",
     srcs = ["generate_out_file.sh"],
     data = [
-        "//run:runtimeoverrides",
+        "patch_require.rb",
         "@com_stripe_ruby_typer//gems/sorbet-runtime",
         "@sorbet_ruby//:ruby",
     ],
