--- a/core/BUILD
+++ b/core/BUILD
@@ -44,7 +44,6 @@ cc_test(
             "**/flycheck_*",
         ],
     ),
-    copts = ["-Iexternal/gtest/include"],
     linkstatic = select({
         "//tools/config:linkshared": 0,
         "//conditions:default": 1,
@@ -52,8 +51,7 @@ cc_test(
     visibility = ["//tools:__pkg__"],
     deps = [
         ":core",
-        "@com_google_googletest//:gtest",
-        "@com_google_googletest//:gtest_main",
+        "@doctest",
     ],
 )
 
