--- a/main/options/BUILD
+++ b/main/options/BUILD
@@ -27,7 +27,6 @@ cc_test(
     srcs = glob([
         "test/*.cc",
     ]),
-    copts = ["-Iexternal/gtest/include"],
     linkstatic = select({
         "//tools/config:linkshared": 0,
         "//conditions:default": 1,
@@ -36,7 +35,6 @@ cc_test(
     deps = [
         "//core",
         "//main/options",
-        "@com_google_googletest//:gtest",
-        "@com_google_googletest//:gtest_main",
+        "@doctest",
     ],
 )
