--- a/parser/BUILD
+++ b/parser/BUILD
@@ -71,7 +71,6 @@ cc_test(
     srcs = glob([
         "test/*.cc",
     ]),
-    copts = ["-Iexternal/gtest/include"],
     data = glob([
         "fixtures/*.rb",
         "fixtures/*.rb.exp",
@@ -83,7 +82,6 @@ cc_test(
     visibility = ["//tools:__pkg__"],
     deps = [
         ":parser",
-        "@com_google_googletest//:gtest",
-        "@com_google_googletest//:gtest_main",
+        "@doctest",
     ],
 )
