Remove doctest configuration from individual tests
Using the config macros directly has been replaced with the
`@doctest//:doctest_main` library, which defines the configuration
necessary to generate the test runner.

--- a/main/lsp/BUILD
+++ b/main/lsp/BUILD
@@ -112,6 +112,7 @@ cc_test(
         "//payload",
         "//test/helpers",
         "@doctest",
+        "@doctest//:doctest_main",
     ],
 )
 
@@ -129,6 +130,7 @@ cc_test(
         "//payload",
         "//test/helpers",
         "@doctest",
+        "@doctest//:doctest_main",
     ],
 )
 
@@ -146,6 +148,7 @@ cc_test(
         "//payload",
         "//test/helpers",
         "@doctest",
+        "@doctest//:doctest_main",
     ],
 )
 
@@ -163,6 +166,7 @@ cc_test(
         "//payload",
         "//test/helpers",
         "@doctest",
+        "@doctest//:doctest_main",
     ],
 )
 
@@ -180,5 +184,6 @@ cc_test(
         "//payload",
         "//test/helpers",
         "@doctest",
+        "@doctest//:doctest_main",
     ],
 )
