Revert "Test a build on the mac"
This reverts commit 5e82b97414652a1a1e6af12398a9ee30a1b012f7.

--- a/.buildkite/pipeline.yaml
+++ b/.buildkite/pipeline.yaml
@@ -26,7 +26,7 @@ steps:
 
   - label: ":mac: test-static-sanitized.sh (master only)"
     command: .buildkite/test-static-sanitized.sh
-    #branches: "master"
+    branches: "master"
     artifact_paths: _out_/profile.json
     agents:
       os: mac
