Golf down lsp_test_runner deps

--- a/test/BUILD
+++ b/test/BUILD
@@ -82,22 +82,9 @@ cc_binary(
     }),
     visibility = ["//tools:__pkg__"],
     deps = [
-        "//ast/desugar",
-        "//ast/treemap",
-        "//cfg",
-        "//cfg/builder",
-        "//class_flatten",
-        "//core",
-        "//definition_validator",
-        "//infer",
-        "//local_vars",
-        "//main/autogen",
+        "//common",
         "//main/lsp",
-        "//main/pipeline/semantic_extension:none",
-        "//namer",
         "//payload",
-        "//resolver",
-        "//rewriter",
         "//test/helpers",
         "@cxxopts",
         "@doctest",
